# credentials-cpp

./: .gitignore  CMakeLists.txt  README-zh-CN.md  README.md
.github/workflows/: ci.yml
include/alibabacloud/credential/: AuthUtil.hpp  Constant.hpp  Credential.hpp  Export.hpp  Model.hpp
include/alibabacloud/credential/provider/: AccessKeyProvider.hpp  BearerTokenProvider.hpp  CLIProfileProvider.hpp  CloudSSOCredentialsProvider.hpp  DefaultProvider.hpp  EcsRamRoleProvider.hpp  EnvironmentVariableProvider.hpp  NeedFreshProvider.hpp  OAuthCredentialsProvider.hpp  OIDCRoleArnProvider.hpp  ProfileProvider.hpp  Provider.hpp  RamRoleArnProvider.hpp  RefreshableProvider.hpp  RsaKeyPairProvider.hpp  StsProvider.hpp  URLProvider.hpp
scripts/: format.sh  install.sh  run_ut.sh
src/: AuthUtil.cpp  Client.cpp  Constant.cpp  Model.cpp
src/provider/: CLIProfileProvider.cpp  CloudSSOCredentialsProvider.cpp  DefaultProvider.cpp  EcsRamRoleProvider.cpp  EnvironmentVariableProvider.cpp  OAuthCredentialsProvider.cpp  OIDCRoleArnProvider.cpp  ProfileProvider.cpp  RamRoleArnProvider.cpp  RefreshableProvider.cpp  RsaKeyPairProvider.cpp  URLProvider.cpp
tests/: credentials.cpp  test_auth_util.cpp  test_basic.cpp  test_chain_provider.cpp  test_cli_profile_provider.cpp  test_client.cpp  test_config_model.cpp  test_ecs_ram_role_provider.cpp  test_edge_cases.cpp  test_env_priority.cpp  test_environment_default.cpp  test_integration_scenarios.cpp  test_profile_provider.cpp  test_providers.cpp  test_refreshable_provider.cpp  test_url_provider.cpp
